# hsk-syllabus-vocabulary-parser

./: .gitignore  AGENTS.md  README.md  extract_hsk_tsv.py  hsk_word_list.tsv  pyproject.toml  report.md
data/: cedict_patch.u8  disambiguation.tsv
src/hsk_pipeline/: __init__.py  cli.py  models.py  pipeline.py  validation.py
src/hsk_pipeline/cedict/: __init__.py  disambiguation.py  matcher.py  parser.py  repository.py
src/hsk_pipeline/io/: __init__.py  tsv_io.py
src/hsk_pipeline/reporting/: report_md.py
src/hsk_pipeline/stages/: stage1_extract.py  stage2_number.py  stage3_enrich.py
tests/fixtures/: mini_cedict.u8
tests/integration/: test_pipeline_e2e_fixture.py
tests/unit/: test_cedict_parser.py  test_report_md.py  test_stage1_extract.py  test_stage2_number.py  test_stage3_enrich.py  test_tsv_io.py  test_validation.py
