[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hsk-tsv-extractor"
version = "0.1.0"
description = "Extract an HSK word list from a PDF into a TSV file."
requires-python = ">=3.10"
dependencies = [
  "pdfplumber>=0.10.3,<1.0.0",
  "pypinyin>=0.50.0",
]

[project.scripts]
hsk-extract = "hsk_pipeline.cli:main"

[dependency-groups]
dev = [
  "black>=24.0.0",
  "pytest>=8.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
